syntax = "proto3";

option go_package = "genproto/user_service";

package user_service;

service CustomerService {
    rpc Create(CreateCustomer) returns (CustomerPrimaryKey) {}
    rpc GetByID(CustomerPrimaryKey) returns (Customer) {}
    rpc GetList(GetListCustomerRequest) returns (GetListCustomerResponse) {}
    rpc Update(UpdateCustomerRequest) returns (UpdateCustomerResponse) {}
    rpc Delete(CustomerPrimaryKey) returns (Empty) {}
    rpc GetByGmail(CustomerGmail) returns (CustomerPrimaryKey) {}
}

message Empty {}

message CustomerPrimaryKey {
    string id = 1;
}
    
message CustomerGmail{
    string gmail=1;
}

message CreateCustomer {
    string phone = 1;
    string gmail = 2;
    string language = 3;
    string date_of_birth = 4;
    string gender = 5;
}

message Customer {
    string id = 1;
    string phone = 2;
    string gmail = 3;
    string language = 4;
    string date_of_birth = 5;
    string gender = 6;
    string created_at = 8;
    string updated_at = 9;
    string deleted_at = 10;
}

message UpdateCustomerRequest {
    string phone = 1;
    string gmail = 2;
    string language = 3;
    string date_of_birth = 4;
    string gender = 5;
    string id =6;
}

message UpdateCustomerResponse {
    string message = 1;
}

message GetListCustomerRequest {
    int64 offset = 1;
    int64 limit = 2;
    string search = 3;
}

message GetListCustomerResponse {
    int64 Count = 1;
    repeated Customer Customer = 2;
}
